# fastapi-mongo-starter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
src/: main.py  seed.py
src/configs/: __init__.py  env.py  log.py
src/connections/: pmongo.py
src/models/: base.py  connection.py  post.py  response.py
src/routes/: __init__.py  middleware.py
src/routes/api/: post.py
src/routes/services/: post.py
test/: Readme.md  test_main.py  test_module.py  test_post.py
