[tool.poetry]
name = "fastapi-mongo-starter"
version = "1.0.0"
description = "The Fastapi Starter Template is a basic API service designed to manage posts. It allows users to create, read, update, and delete posts efficiently."
authors = ["Oktapian <oktapian1998@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.12"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
tomli = "^2.2.1"
pymongo = "^4.10.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[tool.poetry.group.docs.dependencies]
scalar-fastapi = "^1.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
